# download_manager

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  backend.rs  frontend.rs  main.rs
src/backend/: dev.rs  download.rs  download_job.rs
src/frontend/: app_event.rs  app_mode.rs  download_list_state.rs  event.rs  insert.rs  key_events.rs  view.rs
src/frontend/view/: body.rs  footer.rs  header.rs  pop.rs  semi_body.rs
