[package]
name = "download_manager"
version = "0.1.0"
description = "An example of parallel computing"
authors = ["Mohmmed Ahmed"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
reqwest = { version = "0.12", features = ["stream"] }
bytesize = "2"
directories = "6"
tokio-stream = "0.1"
